# Coding-Exercises

./: .clang-format  .gitignore  README-format.md  README.md  magic.sh
Common/C++/: Duration.h
Common/Go/: go.mod
DefaultFormat/: CMakeLists.txt  Class-template.h  Class.cpp  Class.h  README-format.md  main.c  main.cpp  main.py
DefaultFormat/C/: CMakeLists.txt
Divers/BinarySearch/: README.md
Divers/DAC-MaxMin/: README.md
Divers/DP-DongXu/: README.md
Divers/DP-Fibonacci/: README.md
Divers/DeliveryChecker/: README.md
Divers/Fx-Problem/: README.md
Divers/Life/: README.md
Divers/LinkedStack/: README.md
Divers/Queue/: README.md
Divers/QuickSort/: README.md
Divers/Stack/: README.md
Divers/SumSquare/: README.md
Divers/Web-Crawler/: README.md
Kattis/ABC/: README.md
Kattis/AlienNumbers/: README.md
Kattis/ArmyStrengthEasy-Hard/: README.md
Kattis/DrinkingSong/: README.md
Kattis/ExplodingBatterries/: README.md
Kattis/SoftPassword/: README.md
Kattis/WatchDog/: README.md
LeetCode/BestTimeToBuyAndSellII/: README.md
LeetCode/ContainsDuplicate/: README.md
LeetCode/CountGoodTriples/: README.md
LeetCode/DynamicProgrammingEasy/: README.md
LeetCode/FindTheDuplicateNumber/: README.md
LeetCode/LinkedListProblems/: README.md
LeetCode/MathEasy/: README.md
LeetCode/PlusOne/: README.md
LeetCode/Queue-Stack/: README.md
LeetCode/RemoveDuplicates/: README.md
LeetCode/RemoveNthNodeFromTheEndOfList/: README.md
LeetCode/ReverseString/: README.md
LeetCode/RotateArray/: README.md
LeetCode/SingleNumber/: README.md
(+114 files in other folders)
